--- a/world/gradle/.artixlinux/pkgbase.yaml
+++ b/world/gradle/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: gradle
-  version: 8.13-1
-  arch:
-    - any
-  pkgname:
-    - gradle
-    - gradle-doc
-    - gradle-src
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 8.13-1
+    version: 8.14.1-1
     packages:
-      - gradle-8.13-1-any.pkg.tar.zst
-      - gradle-doc-8.13-1-any.pkg.tar.zst
-      - gradle-src-8.13-1-any.pkg.tar.zst
+      - gradle-8.14.1-1-any.pkg.tar.zst
+      - gradle-doc-8.14.1-1-any.pkg.tar.zst
+      - gradle-src-8.14.1-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
