--- a/world/percona-server/.artixlinux/pkgbase.yaml
+++ b/world/percona-server/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: percona-server
-  version: 8.4.4_4-3
-  arch:
-    - x86_64
-  pkgname:
-    - libperconaserverclient
-    - percona-server-clients
-    - percona-server
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 8.4.4_4-3
+    version: 8.4.4_4-4
     packages:
-      - libperconaserverclient-8.4.4_4-3-x86_64.pkg.tar.zst
-      - percona-server-clients-8.4.4_4-3-x86_64.pkg.tar.zst
-      - percona-server-8.4.4_4-3-x86_64.pkg.tar.zst
+      - libperconaserverclient-8.4.4_4-4-x86_64.pkg.tar.zst
+      - percona-server-clients-8.4.4_4-4-x86_64.pkg.tar.zst
+      - percona-server-8.4.4_4-4-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
