--- a/world/vlc/.artixlinux/pkgbase.yaml
+++ b/world/vlc/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: vlc
-  version: 3.0.21-19
-  arch:
-    - x86_64
-  pkgname:
-    - vlc
-    - libvlc
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.0.21-19
+    version: 3.0.21-20
     packages:
-      - vlc-3.0.21-19-x86_64.pkg.tar.zst
-      - libvlc-3.0.21-19-x86_64.pkg.tar.zst
+      - vlc-3.0.21-20-x86_64.pkg.tar.zst
+      - libvlc-3.0.21-20-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
