--- a/world/nvidia-settings/.artixlinux/pkgbase.yaml
+++ b/world/nvidia-settings/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: nvidia-settings
-  version: 570.144-1
-  arch:
-    - x86_64
-  pkgname:
-    - nvidia-settings
-    - libxnvctrl
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 570.144-1
+    version: 570.153.02-1
     packages:
-      - nvidia-settings-570.144-1-x86_64.pkg.tar.zst
-      - libxnvctrl-570.144-1-x86_64.pkg.tar.zst
+      - nvidia-settings-570.153.02-1-x86_64.pkg.tar.zst
+      - libxnvctrl-570.153.02-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
