--- a/world/mosh/PKGBUILD
+++ b/world/mosh/PKGBUILD
@@ -1,10 +1,11 @@
-# Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Christian Neukirchen <chneukirchen@gmail.com>
 # Contributor: Thomas Weißschuh <thomas_weissschuh@lavabit.com>
 
 pkgname=mosh
 pkgver=1.4.0
-pkgrel=22
+pkgrel=23
 pkgdesc='Mobile shell, surviving disconnects with local echo and line editing'
 arch=(x86_64)
 url='https://mosh.org/'
