--- a/world/opencv/.artixlinux/pkgbase.yaml
+++ b/world/opencv/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,13 +29,13 @@ repos:
     packages: []
     debug: []
   world:
-    version: 4.11.0-10
+    version: 4.11.0-11
     packages:
-      - opencv-4.11.0-10-x86_64.pkg.tar.zst
-      - opencv-samples-4.11.0-10-x86_64.pkg.tar.zst
-      - python-opencv-4.11.0-10-x86_64.pkg.tar.zst
-      - opencv-cuda-4.11.0-10-x86_64.pkg.tar.zst
-      - python-opencv-cuda-4.11.0-10-x86_64.pkg.tar.zst
+      - opencv-4.11.0-11-x86_64.pkg.tar.zst
+      - opencv-samples-4.11.0-11-x86_64.pkg.tar.zst
+      - python-opencv-4.11.0-11-x86_64.pkg.tar.zst
+      - opencv-cuda-4.11.0-11-x86_64.pkg.tar.zst
+      - python-opencv-cuda-4.11.0-11-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
