--- a/world/valgrind/.artixlinux/pkgbase.yaml
+++ b/world/valgrind/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: valgrind
-  version: 3.25.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - valgrind
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.25.0-2
+    version: 3.25.1-1
     packages:
-      - valgrind-3.25.0-2-x86_64.pkg.tar.zst
+      - valgrind-3.25.1-1-x86_64.pkg.tar.zst
+    debug:
+      - valgrind-debug-3.25.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
