--- a/galaxy/qt5-styleplugins/.artixlinux/pkgbase.yaml
+++ b/galaxy/qt5-styleplugins/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: qt5-styleplugins
-  version: 5.0.0.20170311-48
-  arch:
-    - x86_64
-    - aarch64
-  pkgname:
-    - qt5-styleplugins
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: 5.0.0.20170311-44
     packages:
       - qt5-styleplugins-5.0.0.20170311-44-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 5.0.0.20170311-48
+    version: 5.0.0.20170311-49
     packages:
-      - qt5-styleplugins-5.0.0.20170311-48-x86_64.pkg.tar.zst
+      - qt5-styleplugins-5.0.0.20170311-49-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
