--- a/world/bear/.artixlinux/pkgbase.yaml
+++ b/world/bear/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 3.1.6-1
+    version: 3.1.6-2
     packages:
-      - bear-3.1.6-1-x86_64.pkg.tar.zst
+      - bear-3.1.6-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
