--- a/world/protobuf/.artixlinux/pkgbase.yaml
+++ b/world/protobuf/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,11 +29,11 @@ repos:
     packages: []
     debug: []
   world:
-    version: 30.2-3
+    version: 31.0-2
     packages:
-      - protobuf-30.2-3-x86_64.pkg.tar.zst
-      - python-protobuf-30.2-3-x86_64.pkg.tar.zst
-      - ruby-google-protobuf-30.2-3-x86_64.pkg.tar.zst
+      - protobuf-31.0-2-x86_64.pkg.tar.zst
+      - python-protobuf-31.0-2-x86_64.pkg.tar.zst
+      - ruby-google-protobuf-31.0-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
