--- a/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
+++ b/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-goblins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -53,8 +53,8 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 5.14.3-1
+    version: 5.14.3-2
     packages:
-      - telegram-desktop-5.14.3-1-x86_64.pkg.tar.zst
+      - telegram-desktop-5.14.3-2-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
