--- a/lib32/lib32-nvidia-utils/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-nvidia-utils/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: lib32-nvidia-utils
-  version: 570.144-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-nvidia-utils
-    - lib32-opencl-nvidia
 actions:
   addRepo: lib32
   removeRepo: lib32-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 570.144-1
+    version: 570.153.02-1
     packages:
-      - lib32-nvidia-utils-570.144-1-x86_64.pkg.tar.zst
-      - lib32-opencl-nvidia-570.144-1-x86_64.pkg.tar.zst
+      - lib32-nvidia-utils-570.153.02-1-x86_64.pkg.tar.zst
+      - lib32-opencl-nvidia-570.153.02-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
