--- a/world/python-cloudpickle/.artixlinux/pkgbase.yaml
+++ b/world/python-cloudpickle/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: python-cloudpickle
-  version: 3.1.0-3
-  arch:
-    - any
-  pkgname:
-    - python-cloudpickle
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.1.0-3
+    version: 3.1.1-1
     packages:
-      - python-cloudpickle-3.1.0-3-any.pkg.tar.zst
+      - python-cloudpickle-3.1.1-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
