--- a/galaxy/waterfox/.artixlinux/pkgbase.yaml
+++ b/galaxy/waterfox/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: galaxy
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -54,7 +54,7 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 6.5.7-2.2
+    version: 6.5.9-2
     packages:
-      - waterfox-6.5.7-2.2-x86_64.pkg.tar.zst
+      - waterfox-6.5.9-2-x86_64.pkg.tar.zst
     debug: []
